--- a/new project.html
+++ b/new project.html
@@ -28,7 +28,12 @@
 
 
         </list>
-
+        <div style="width:70%">
+            <img src="pexels-pixabay-56866.jpg"style="width:100%">
+        </div>
+        <div style="width:70%">
+            <img src="pexels-secret-garden-931177.jpg"style="max-width:100%;height:auto">
+        </div>
 
 
 </section>
