--- a/new project.html
+++ b/new project.html
@@ -34,6 +34,11 @@
         <div style="width:70%">
             <img src="pexels-secret-garden-931177.jpg"style="max-width:100%;height:auto">
         </div>
+        <div style="background-color:green;width:20vw">
+            <h1 style="font-size:5vw;">good evening</h1>
+            <p style="font-size:5vw;">this is high time to develop out skilld</p>
+            
+        </div>
 
 
 </section>
