--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><title>
+    Icon
+</title>
+<link rel="icon"type="image/xicon"href="Circle-icons-image.svg (1).ico">
     <style>
 
         .d1{
@@ -18,7 +21,7 @@
                 .d1{
                     width:10vw;
                     height:10vw;
-                    background-color: brown;
+                    background-color: rgb(56, 165, 42);
 
 
 
